# AIUniversity

./: .gitignore  README.md  ai_university.sqlite  ai_university.sqlite-shm  ai_university.sqlite-wal  app.py  dict_crawler.py  generate_learning_path.py  main.py  pyproject.toml  results.json  streamlit_fe.py  test_app.py
playground/: 1_playground1.ipynb  1_playground_v2.ipynb  2_playground2.ipynb  2_playground2_v2.ipynb  2_playground2_v3.ipynb  2_playground2_v4.ipynb  3_playground.ipynb  ai_university.sqlite  ai_university.sqlite-shm  ai_university.sqlite-wal  results.json  results1.json
